--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   get_it: ^8.2.0
   cloud_firestore: ^6.0.2
   fpdart: ^1.1.1
+  bloc_test: ^10.0.0
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
